# ai-meeting-notes

./: .env.example  .gitignore  CLAUDE.md  README.md  run.bat
backend/: build.bat  meeting_notes_gui.spec  meeting_notes_server.spec  pyproject.toml
backend/src/meeting_notes/: __init__.py  __main__.py  config.py  connectivity.py  session.py
backend/src/meeting_notes/audio/: capture.py  devices.py  silence.py  vad.py  wav_writer.py
backend/src/meeting_notes/engines/: base.py  cloud.py  local.py  selector.py
backend/src/meeting_notes/output/: markdown.py
backend/src/meeting_notes/server/: __init__.py  app.py  models.py  server_runner.py  ws.py
backend/src/meeting_notes/ui/: __init__.py  api.py  app.py  config_bridge.py  crypto.py  floating_indicator.py  merge.py  session_runner.py  settings_store.py
backend/src/meeting_notes/ui/web/: app.js  index.html  settings.js  styles.css
backend/tests/: conftest.py  manual_test_cloud.py  test_config.py  test_config_bridge.py  test_delete_session.py  test_editor_merge.py  test_engines.py  test_floating_indicator.py  test_fragment_merging.py  test_local_engine.py  test_markdown_writer.py  test_server_app.py  test_server_models.py  test_server_ws.py  test_session_audio_loop.py  test_session_history.py  test_settings_store.py  test_silence_monitor.py  test_ui_crypto.py  test_vad.py  test_wav_writer.py
obsidian-plugin/: electron-builder.json  install.bat  install.ps1  installer.nsh  manifest.json  package-lock.json  package.json  styles.css  tsconfig.desktop.json
obsidian-plugin/installer/: installer.py  installer.spec
(+22 files in other folders)
