[project]
name = "ai-meeting-notes"
version = "0.1.0"
description = "Real-time meeting transcription with cloud and local AI engines"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.36.0",
    "PyAudioWPatch>=0.2.12",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
vad = [
    "onnxruntime>=1.17",
    "torch>=2.0",  # Only needed for first-time model download
]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=14.0",
]
local = [
    "faster-whisper>=1.1",
]
gui = [
    "pywebview>=6.0",
]
build = [
    "pyinstaller>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_notes"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
